# Interactive-ChatBot

./: .env.example  .gitignore  README.md  bm25.ipynb  bm25_values.json  bm25_values_v2.json  bm25_values_v3.json  docker-compose.yml  output.txt  pyproject.toml  search_results.txt  system_classification.ipynb  test.ipynb
dev/: pyproject.toml
dev/data/: customers.json  customers.md  qa_1213_v1.json  sales.md
dev/system_classify/: classifier_training.ipynb  customers.json  data_generation.ipynb  qa copy.ipynb  qa.ipynb
docs/: .$Untitled Diagram.drawio.bkp  Untitled Diagram.drawio
frontend/static/css/: chat.css  control.css
frontend/static/js/: chat.js  (+1 more)
frontend/templates/: chat.html  control.html
logs/: chat_turns_log.json
nginx/: dockerfile  nginx.conf
notebooks/: bm25.ipynb  bm25_v2.ipynb  bm25_v3.ipynb  bm25_values_v1.json  sparse.ipynb  test.ipynb
server/: .env.example  dockerfile  main.py  pyproject.toml
server/core/: __init__.py  config.py  logs.py
server/core/enums/: __init__.py  model_sizes.py  nodes.py
server/core/schemas/: __init__.py  search.py  structure_llm.py
server/robot/: state.py  workflow.py
server/robot/agents/: __init__.py  answer.py  chat.py  classify.py  history.py  intent.py  queries.py  query.py  search.py  semantic.py
server/routes/: api.py  background.py  utils.py
server/routes/endpoints/: chat.py  chunk.py  extract.py  index.py  tts.py
server/services/: __init__.py  chunk.py  extract.py  history.py
server/store/lexical/: index.py  search.py  utils.py
server/store/nlp/: factory.py
server/store/nlp/interfaces/: generator.py  reranker.py  stt.py
server/store/nlp/prompts/: factory.py
server/store/nlp/prompts/md/: analysis.md  chat.md  chunk-hybird.md  formate.md  history.md  ocr.md  queries.md  semantic.md
server/store/nlp/providers/: embeddings.py  generator.py  reranker.py  stt.py  tts.py
server/store/semantic/providers/: pinecone.py
src/: index.html  main.py
src/api/: __init__.py
src/core/: config.py  depend.py
src/graph/: __init__.py  nodes.py  state.py  utils.py  workflow.py
src/robot/: workflow.py
src/routes/: __init__.py  api.py  chat.py  extract.py  process.py
src/services/: __init__.py  chunk.py  extract.py  process.py
(+55 files in other folders)
