[project]
name = "onyx"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "cohere>=5.18.0",
    "email-validator>=2.3.0",
    "fastapi>=0.117.1",
    "uvicorn>=0.35.0",
    "google-generativeai>=0.8.5",
    "langgraph>=0.6.7",
    "openai>=1.109.0",
    "pillow>=11.3.0",
    "pinecone>=7.3.0",
    "pinecone-text>=0.11.0",
    "pyarabic>=0.6.15",
    "pydantic-settings>=2.11.0",
    "pymupdf>=1.26.4",
    "python-multipart>=0.0.20",
    "redis>=6.4.0",
    "tqdm>=4.67.1",
    "qdrant-client>=1.15.1",
    "python-json-logger>=4.0.0",
    "structlog[dev]>=25.4.0",
]
